# thai-citizen-guide

./: .claudeignore  .dockerignore  .editorconfig  .env  .env.example  .env.prod.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  context.md  default.conf  docker-compose.override.yaml  docker-compose.yaml  gov-search-architecture-v2.html  gov-search-architecture.html  index.html  nginx-tls.sh  package-lock.json  package.json  pnpm-lock.yaml  routes.conf  serve.json  tailwind.config.ts  โครงงาน-AI-Chatbot-Portal.docx
.lovable/: plan.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  init.sql  main.py  mcp_server.py  package.json  pyproject.toml  readme.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7ca7478d3f3d_initial.py
backend/app/: auth.py  concurrency.py  config.py  database.py  db.py  dependencies.py  errors.py  main.py  models.py  scheduler.py
backend/app/auth/: api_key.py  authz.py  dependencies.py  jwt.py  security.py
backend/app/graph/: graph.py  nodes.py  state.py
backend/app/mcp/: client.py  server.py
backend/app/models/: __init__.py  agency.py  audit.py  connection_log.py  conversation.py  evaluation.py  executive_brief.py  llm_provider.py  llm_route.py  llm_usage.py  popular_question.py  relationship.py  setting.py  user.py
backend/app/routers/: agencies.py  api_key.py  api_keys.py  audit_log.py  auth.py  chat.py  connection_logs.py  conversations.py  dashboard.py  executive_summary.py  feedback.py  insight.py  llm.py  parse_spec.py  popular_questions.py  public_status.py  responses.py  seed.py  settings.py  users.py  ws.py
backend/app/schemas/: agency.py  auth.py  chat.py  conversation.py  dashboard.py  executive_summary.py  insight.py  llm_provider.py  llm_route.py  popular_question.py  responses.py  settings.py  user.py
backend/app/services/: agency.py  agency_directory.py  agency_handlers.py  agency_health.py  agency_lifecycle.py  agency_reconcile.py  analytics.py  audit.py  cache_flush.py  circuit_breaker.py  conformance.py  email.py  embedding.py  evaluation.py  llm_client.py  log_sanitize.py  mcp_discovery.py  owner_notify.py  parse_spec.py  popular_questions.py  quota.py  rate_limit.py  session.py  similarity.py  usage_context.py  user.py
backend/app/utils/: __init__.py  retry.py  uuid7.py
backend/migrations/models/: 0_20260603222304_init.py  10_20260612183147_collapse_inactive_status.py  11_20260612184223_relationships.py  12_20260612191245_agency_conformance.py  13_20260502152911_update connection_logs req resp body nullable.py  13_20260612194532_evaluation.py  14_20260513132351_describe_change.py  14_20260612202255_api_key_lifecycle.py  15_20260525025318_add_embedding_and_extensions.py  15_20260525_embed_col.py  15_20260612234811_audit_log.py  16_20260525_add_settings_table.py  16_20260613003706_llm_usage_api_key_id.py  17_20260623103545_backend_refactor_indexes.py  18_20260623154428_agency_add_stats_reset_at.py  19_20260703000000_drop_embedding_add_pg_trgm.py  1_20260609000000_enable_extensions.py  1_20260610110225_describe_change.py  20_20260704093926_llm_providers_routes.py  21_20260711014939_popular_questions.py  22_20260711074128_widen_agency_logo.py  22_20260721230337_message_summary_fields.py  23_20260722001417_message_summary_fields.py  24_20260723040105_drop_relationships_collapse_roles.py  25_20260723074134_drop_rate_limit_columns.py  26_20260723160339_promote_user_to_staff.py  27_20260724014500_drop_reset_token_columns.py  2_20260610110449_ConnectionLog-assistant_message_id.py  3_20260611143319_executive_briefs.py  4_20260325053224_message add updated_at.py  (+9 more)
backend/scripts/: hash_existing_api_keys.py
backend/tests/: conftest.py  test_agencies_health_wiring.py  test_agencies_router.py  test_agency_error_window.py  test_agency_health_endpoint.py  test_agency_health_route_reset.py  test_agency_owners.py  test_agency_schemas.py  test_agency_stats_reset_field.py  test_agency_status_endpoint.py  test_agency_status_enum.py  test_agency_update_demotion.py  test_api_key_enforcement.py  test_api_key_hashing.py  test_api_key_lifecycle_model.py  test_api_key_rest_auth.py  test_api_key_router_lifecycle.py  test_audit.py  test_audit_endpoint.py  test_audit_wiring.py  test_auditor_conversations.py  test_auditor_read_access.py  test_auth_change_password.py  test_auth_reset_token.py  test_authz.py  test_basic_user_allowlist.py  test_cache_flush.py  test_chat_schema.py  test_circuit_breaker.py  test_concurrency.py  test_config_guard.py  test_config_overrides_report.py  test_conformance.py  test_connection_logs_authz.py  test_connection_logs_filter.py  test_conversation_ownership.py  test_conversations_history.py  test_database_config.py  test_error_envelope.py  test_evaluation.py  (+40 more)
(+682 files in other folders)
