[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "openai==1.57.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.6.1",
    "pydantic[email]==2.10.3",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.32.1",
    "websockets==14.1",
]
